objects/Budget_Updates__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Net_Change__c</fullName>
        <formula>New_Budget_Amount__c - Old_Package__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the net change in the budget amount</inlineHelpText>
        <label>Budget Net Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Package_Amount__c</fullName>
        <label>Legacy Change Package Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budget_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Metric__c</fullName>
        <label>Custom Metric</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Budget_Amount__c</fullName>
        <inlineHelpText>enter the new budget amount</inlineHelpText>
        <label>New Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Package__c</fullName>
        <label>Old Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <picklist>
            <picklistValues>
                <fullName>IMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDC SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Targeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budget Updates</relationshipLabel>
        <relationshipName>Budget_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Budget Updates</relationshipLabel>
        <relationshipName>Budget_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sugar_Source_Record_Id__c</fullName>
        <label>Sugar Source Record Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar__c</fullName>
        <label>Haystak Budget #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <label>Budget Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Package_Type__c</columns>
        <columns>Old_Package__c</columns>
        <columns>New_Budget_Amount__c</columns>
        <columns>Budget_Net_Change__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Completed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Account__c</field>
            <operation>notContain</operation>
            <value>test dealer</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedThisMonth</fullName>
        <columns>Related_Account__c</columns>
        <columns>Package_Type__c</columns>
        <columns>Old_Package__c</columns>
        <columns>Budget_Net_Change__c</columns>
        <columns>New_Budget_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Related_POA__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>eddice</value>
        </filters>
        <label>Completed This Month</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_completed</fullName>
        <columns>Related_Account__c</columns>
        <columns>Package_Type__c</columns>
        <columns>Old_Package__c</columns>
        <columns>Budget_Net_Change__c</columns>
        <columns>New_Budget_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Completed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Budget-{YYYY}{MM}-{0}</displayFormat>
        <label>Budget Updates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>